--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@hapi/joi": "^15.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "connect-form": "^0.2.1",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.3",
     "multer": "^1.4.1",
+    "socket.io": "^2.2.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
