--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Большая домашняя работа курса по Node.js - Корпоративная система _\"LoftSystem\"_.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/app.js"
+    "dev": "nodemon server/app.js",
+    "prod": "cross-env NODE_ENV=production node server/app.js"
   },
   "author": "Klimenko Ivan",
   "license": "MIT",
@@ -15,6 +16,7 @@
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "jimp": "^0.6.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.3",
     "multer": "^1.4.1",
@@ -22,6 +24,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "nodemon": "^1.19.1"
   }
 }
