--- a/.env
+++ b/.env
@@ -3,14 +3,14 @@ NODE_ENV=development
 JWT_SECRET=loftschool
 JWT_TIME_TO_EXPIRE=3600000
 
-DB_HOST_PRODUCTION=localhost
-DB_PORT_PRODUCTION=27017
-DB_NAME_PRODUCTION=loftsystem
-DB_USER_PRODUCTION=""
-DB_PASS_PRODUCTION="production"
+DB_HOST_PRODUCTION=glacialix-lblnh.mongodb.net
+DB_PORT_PRODUCTION=""
+DB_NAME_PRODUCTION=test
+DB_USER_PRODUCTION=glacialix
+DB_PASS_PRODUCTION="loftschool"
 
 DB_HOST_DEVELOPMENT=localhost
 DB_PORT_DEVELOPMENT=27017
 DB_NAME_DEVELOPMENT=loftsystem
 DB_USER_DEVELOPMENT=""
-DB_PASS_DEVELOPMENT="development"
+DB_PASS_DEVELOPMENT=""
