--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Большая домашняя работа курса по Node.js - Корпоративная система _\"LoftSystem\"_.",
   "main": "index.js",
   "scripts": {
+    "start": "cross-env NODE_ENV=production node server/app.js",
     "dev": "nodemon server/app.js",
     "prod": "cross-env NODE_ENV=production node server/app.js"
   },
