mongo prod works

--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ NODE_ENV=development
 JWT_SECRET=loftschool
 JWT_TIME_TO_EXPIRE=3600000
 
-DB_HOST_PRODUCTION=glacialix-lblnh.mongodb.net
+DB_HOST_PRODUCTION="glacialix-lblnh.mongodb.net"
 DB_PORT_PRODUCTION=""
-DB_NAME_PRODUCTION=test
-DB_USER_PRODUCTION=glacialix
+DB_NAME_PRODUCTION="test"
+DB_USER_PRODUCTION="Glacialix"
 DB_PASS_PRODUCTION="loftschool"
 
 DB_HOST_DEVELOPMENT=localhost
